apps/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: whoami.c-b.io
    http:
      paths:
        - backend:
            service:
              name: whoami-service
              port:
                number: 80
          path: /
          pathType: Prefix
  tls:
    - hosts:
        - whoami.c-b.io
      secretName: whoami-c-b-io-tls
